poprawki final form over 3000

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,30 @@
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
+  .container {
+    margin: 0, auto;
+    width: 100%;
+    max-width: 480px;
+    padding: 0 15px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .container {
+    margin: 0, auto;
+    width: 100%;
+    max-width: 768px;
+    padding: 0 15px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    margin: 0, auto;
+    width: 100%;
+    max-width: 1200px;
+    padding: 0 15px;
+  }
+}
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .footer {
     background-color: #2f303a;
     color: #ffffff;
@@ -204,6 +228,26 @@
     margin: 0;
     padding-top: 10px;
   }
+  .web--footer {
+    color: #2196f3;
+    text-decoration: none;
+    font-family: "Raleway";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 31px;
+    letter-spacing: 1.19;
+  }
+  .studio--footer {
+    color: #ffffff;
+    text-decoration: none;
+    font-family: "Raleway";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 31px;
+    letter-spacing: 1.19;
+  }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer {
@@ -366,13 +410,33 @@
     margin: 0;
     padding-top: 10px;
   }
+  .web--footer {
+    color: #2196f3;
+    text-decoration: none;
+    font-family: "Raleway";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 31px;
+    letter-spacing: 1.19;
+  }
+  .studio--footer {
+    color: #ffffff;
+    text-decoration: none;
+    font-family: "Raleway";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 31px;
+    letter-spacing: 1.19;
+  }
 }
 @media screen and (min-width: 1200px) {
   .footer {
     background-color: #2f303a;
     color: #ffffff;
-    padding-top: 126px;
-    padding-bottom: 126px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -537,6 +601,26 @@
     color: #757575;
     margin: 0;
   }
+  .web--footer {
+    color: #2196f3;
+    text-decoration: none;
+    font-family: "Raleway";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 31px;
+    letter-spacing: 1.19;
+  }
+  .studio--footer {
+    color: #ffffff;
+    text-decoration: none;
+    font-family: "Raleway";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 31px;
+    letter-spacing: 1.19;
+  }
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .header {
@@ -638,6 +722,26 @@
     cursor: pointer;
     transition: cubic-bezier(250ms);
   }
+  .web {
+    color: #2196f3;
+    text-decoration: none;
+    font-family: "Raleway";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 31px;
+    letter-spacing: 1.19;
+  }
+  .studio {
+    color: #000000;
+    text-decoration: none;
+    font-family: "Raleway";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 31px;
+    letter-spacing: 1.19;
+  }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .header {
@@ -732,6 +836,26 @@
     fill: #2196f3;
     cursor: pointer;
     transition: cubic-bezier(250ms);
+  }
+  .web {
+    color: #2196f3;
+    text-decoration: none;
+    font-family: "Raleway";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 31px;
+    letter-spacing: 1.19;
+  }
+  .studio {
+    color: #000000;
+    text-decoration: none;
+    font-family: "Raleway";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 31px;
+    letter-spacing: 1.19;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -830,6 +954,26 @@
     cursor: pointer;
     background-color: transparent;
     transition: cubic-bezier(250ms);
+  }
+  .web {
+    color: #2196f3;
+    text-decoration: none;
+    font-family: "Raleway";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 31px;
+    letter-spacing: 1.19;
+  }
+  .studio {
+    color: #000000;
+    text-decoration: none;
+    font-family: "Raleway";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 31px;
+    letter-spacing: 1.19;
   }
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
@@ -1010,11 +1154,12 @@
   }
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
-  .article__container {
-    max-width: 480px;
-    margin: 0 auto;
-    padding: 30px 15px;
-    margin-top: 40px;
+  .article {
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    padding-top: 60px;
+    padding-bottom: 60px;
   }
   .article__description {
     font-family: "Roboto";
@@ -1060,11 +1205,12 @@
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .article__container {
-    max-width: 768px;
-    margin: 0 auto;
-    padding: 30px 15px;
-    margin-top: 40px;
+  .article {
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    padding-top: 60px;
+    padding-bottom: 45px;
   }
   .article__description {
     /* margin: 10 15px 15px; */
@@ -1114,12 +1260,10 @@
 @media screen and (min-width: 1200px) {
   .article {
     color: #ffffff;
+    display: flex;
+    justify-content: center;
     padding-top: 94px;
     padding-bottom: 94px;
-  }
-  .article__container {
-    max-width: 1200px;
-    margin: 0 auto;
   }
   .article__description {
     /* margin: 10 15px 15px; */
@@ -1170,9 +1314,24 @@
   }
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
-  .slider__container {
+  .slider {
     color: #ffffff;
     display: flex;
+    justify-content: center;
+    padding-bottom: 60px;
+    border-top: 1px solid #ececec;
+  }
+  .portfolio {
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 44px;
+    margin: 0;
+    gap: 0;
+  }
+  .slider__container {
+    color: #ffffff;
+    display: inline-block;
     justify-content: center;
     border-top: 1px solid #ececec;
     padding-top: 60px;
@@ -1196,20 +1355,12 @@
     padding: 0;
     margin: 0;
   }
-  .portfolio {
-    color: #ffffff;
-    display: flex;
-    justify-content: center;
-    padding-bottom: 44px;
-    margin: 0;
-    gap: 0;
-  }
   .description-portfolio {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     color: #212121;
-    max-width: 370px;
+    max-width: 294px;
     padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 20px;
@@ -1241,8 +1392,6 @@
     position: absolute;
     padding-top: 20px;
     padding-left: 35px;
-    width: 100%;
-    height: 100%;
     transform: translateY(0);
     transition: transform 250ms ease;
   }
@@ -1257,20 +1406,33 @@
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
+  .slider {
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 60px;
+    border-top: 1px solid #ececec;
+  }
+  .portfolio {
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 60px;
+  }
   .slider__container {
     color: #ffffff;
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
     border-top: 1px solid #ececec;
     padding-top: 94px;
     padding-bottom: 50px;
+    max-width: 768px;
   }
   .portfolio__box {
     margin-bottom: 10px;
     position: relative;
     overflow: hidden;
+    max-width: 294px;
   }
   .portfolio__container {
     max-width: 768px;
@@ -1284,14 +1446,6 @@
     gap: 0;
     padding: 0;
     margin: 0;
-  }
-  .portfolio {
-    color: #ffffff;
-    display: flex;
-    justify-content: center;
-    padding-bottom: 44px;
-    margin: 0;
-    gap: 0;
   }
   .description-portfolio {
     display: flex;
@@ -1346,18 +1500,20 @@
   }
 }
 @media screen and (min-width: 1200px) {
-  .slider__container {
-    min-width: 1200px;
+  .slider {
     color: #ffffff;
     display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: center;
+    padding-bottom: 60px;
+    border-top: 1px solid #ececec;
+  }
+  .slider__container {
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
     border-top: 1px solid #ececec;
     padding-top: 94px;
     padding-bottom: 50px;
-    padding-left: 10px;
-    padding-right: 10px;
   }
   .portfolio__box {
     margin-bottom: 10px;
@@ -2452,7 +2608,7 @@
   .menu-container {
     width: 450px;
     position: fixed;
-    height: 800px;
+    height: 796px;
     background-color: white;
     transform: scaleX(0);
     transition: transform 1s;
@@ -2464,6 +2620,14 @@
     top: 0;
     left: 0;
     z-index: 2;
+  }
+  .menu__box {
+    max-width: 450px;
+    display: flex;
+    flex-direction: column;
+    padding-right: 0px;
+    margin: 0px;
+    padding: 0;
   }
   .is-open {
     transform: scaleX(1);
@@ -2537,17 +2701,21 @@
     background-color: transparent;
   }
   .mobile-link--mail {
+    display: inline-block;
     color: #757575;
     font-size: 24px;
+    padding-top: 50px;
   }
   .menu-wrap {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     padding-top: 48px;
+    list-style-type: none;
   }
   .menu-wrap--contact {
     padding-top: 250px;
+    text-decoration: none;
   }
   .menu-wrap--socials {
     margin-left: 20px;
@@ -2790,16 +2958,16 @@
     align-items: center;
     justify-content: center;
     border-top: 1px solid #ececec;
+    background-image: linear-gradient(to top, rgba(0, 18, 105, 0) 0%, rgba(47, 48, 58, 0.4) 100%), url("../images/tm-mobile.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
   }
   .order__container {
     min-width: 480px;
     padding-top: 118px;
     padding-bottom: 118px;
     color: #ffffff;
-    background-image: linear-gradient(to top, rgba(0, 18, 105, 0) 0%, rgba(47, 48, 58, 0.4) 100%), url("../images/tm-mobile.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -2820,15 +2988,15 @@
     align-items: center;
     justify-content: center;
     border-top: 1px solid #ececec;
+    background-image: linear-gradient(to top, rgba(0, 18, 105, 0) 0%, rgba(47, 48, 58, 0.4) 100%), url("../images/tm-tablet2.jpg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
   }
   .order .order__container {
     min-width: 768px;
     height: 400px;
     color: #ffffff;
-    background-image: linear-gradient(to top, rgba(0, 18, 105, 0) 0%, rgba(47, 48, 58, 0.4) 100%), url("../images/tm-tablet2.jpg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -2850,14 +3018,14 @@
     align-items: center;
     justify-content: center;
     border-top: 1px solid #ececec;
+    background-image: linear-gradient(to top, rgba(0, 18, 105, 0) 0%, rgba(47, 48, 58, 0.4) 100%), url("../images/team.jpg");
+    background-size: cover;
+    background-position: center;
   }
   .order .order__container {
     min-width: 1200px;
     height: 600px;
     color: #ffffff;
-    background-image: linear-gradient(to top, rgba(0, 18, 105, 0) 0%, rgba(47, 48, 58, 0.4) 100%), url("../images/team.jpg");
-    background-size: cover;
-    background-position: center;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -2977,6 +3145,7 @@
     transition: cubic-bezier(250ms);
   }
   .button--portfolio {
+    display: flex;
     color: #212121;
     background-color: #f5f4fa;
     margin-left: 8px;
