--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -114,6 +114,7 @@
     }
   }
   .button--portfolio {
+    display: flex;
     color: #212121;
     background-color: #f5f4fa;
     margin-left: 8px;
