--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import "utils/variables";
+@import "components/container";
 @import "components/pagefooter";
 @import "components/pageheader";
 @import "components/pagesectionclients";
