--- a/sass/components/_pagesectionarticle.scss
+++ b/sass/components/_pagesectionarticle.scss
@@ -1,10 +1,19 @@
 @media screen and (min-width: 320px) and (max-width: 767px) {
-  .article__container {
-    max-width: 480px;
-    margin: 0 auto;
-    padding: 30px 15px;
-    margin-top: 40px;
+  .article {
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    // background-color: aquamarine;
   }
+
+  // .article__container {
+  //   max-width: 480px;
+  //   margin: 0 auto;
+  //   padding: 30px 15px;
+  //   margin-top: 40px;
+  // }
 
   .article__description {
     font-family: "Roboto";
@@ -56,12 +65,21 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .article__container {
-    max-width: 768px;
-    margin: 0 auto;
-    padding: 30px 15px;
-    margin-top: 40px;
+  .article {
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    padding-top: 60px;
+    padding-bottom: 45px;
+    // background-color: aquamarine;
   }
+
+  // .article__container {
+  //   max-width: 768px;
+  //   margin: 0 auto;
+  //   padding: 30px 15px;
+  //   margin-top: 40px;
+  // }
 
   .article__description {
     /* margin: 10 15px 15px; */
@@ -116,14 +134,16 @@
 @media screen and (min-width: 1200px) {
   .article {
     color: #ffffff;
-
+    display: flex;
+    justify-content: center;
     padding-top: 94px;
     padding-bottom: 94px;
+    // background-color: aquamarine;
   }
-  .article__container {
-    max-width: 1200px;
-    margin: 0 auto;
-  }
+  // .article__container {
+  //   max-width: 1200px;
+  //   margin: 0 auto;
+  // }
 
   .article__description {
     /* margin: 10 15px 15px; */
@@ -136,7 +156,7 @@
     letter-spacing: 0.03em;
     margin: 0px;
     padding: 0px;
-
+    // background-color: cadetblue;
     color: #757575;
     text-align: justify;
   }
@@ -144,7 +164,7 @@
   .article__box {
     max-width: 270px;
     display: inline-block;
-
+    // background-color: #757575;
     padding-right: 0px;
     margin: 0px;
     padding: 0;
@@ -176,5 +196,6 @@
     color: #212121;
     padding: 0;
     margin: 0;
+    // background-color: darkred;
   }
 }
