--- a/sass/components/_pagesectionportfolio.scss
+++ b/sass/components/_pagesectionportfolio.scss
@@ -1,7 +1,24 @@
 @media screen and (min-width: 320px) and (max-width: 767px) {
-  .slider__container {
+  .slider {
     color: #ffffff;
     display: flex;
+    justify-content: center;
+
+    padding-bottom: 60px;
+    // background-color: aquamarine;
+    border-top: 1px solid #ececec;
+  }
+  .portfolio {
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 44px;
+    margin: 0;
+    gap: 0;
+  }
+  .slider__container {
+    color: #ffffff;
+    display: inline-block;
     justify-content: center;
     border-top: 1px solid #ececec;
     padding-top: 60px;
@@ -29,21 +46,12 @@
     margin: 0;
   }
 
-  .portfolio {
-    color: #ffffff;
-    display: flex;
-    justify-content: center;
-    padding-bottom: 44px;
-    margin: 0;
-    gap: 0;
-  }
-
   .description-portfolio {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     color: #212121;
-    max-width: 370px;
+    max-width: 294px;
     padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 20px;
@@ -80,8 +88,8 @@
     position: absolute;
     padding-top: 20px;
     padding-left: 35px;
-    width: 100%;
-    height: 100%;
+    // width: 100%;
+    // height: 100%;
     transform: translateY(0);
     transition: transform 250ms ease;
   }
@@ -97,21 +105,40 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
+  .slider {
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+
+    padding-bottom: 60px;
+    // background-color: aquamarine;
+    border-top: 1px solid #ececec;
+  }
+
+  .portfolio {
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 60px;
+  }
+
   .slider__container {
     color: #ffffff;
     display: flex;
-    flex-direction: column;
+
     justify-content: center;
-    align-items: center;
+
     border-top: 1px solid #ececec;
     padding-top: 94px;
     padding-bottom: 50px;
+    max-width: 768px;
   }
 
   .portfolio__box {
     margin-bottom: 10px;
     position: relative;
     overflow: hidden;
+    max-width: 294px;
   }
 
   .portfolio__container {
@@ -127,15 +154,6 @@
     gap: 0;
     padding: 0;
     margin: 0;
-  }
-
-  .portfolio {
-    color: #ffffff;
-    display: flex;
-    justify-content: center;
-    padding-bottom: 44px;
-    margin: 0;
-    gap: 0;
   }
 
   .description-portfolio {
@@ -197,19 +215,25 @@
 }
 
 @media screen and (min-width: 1200px) {
-  .slider__container {
-    min-width: 1200px;
+  .slider {
     color: #ffffff;
     display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: center;
+
+    padding-bottom: 60px;
+    // background-color: aquamarine;
+    border-top: 1px solid #ececec;
+  }
+
+  .slider__container {
+    color: #ffffff;
+    display: flex;
+
+    justify-content: center;
+
     border-top: 1px solid #ececec;
     padding-top: 94px;
     padding-bottom: 50px;
-
-    padding-left: 10px;
-    padding-right: 10px;
   }
 
   .portfolio__box {
