--- a/css/main.css
+++ b/css/main.css
@@ -47,13 +47,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    max-width: 480px;
   }
   .footer__container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    width: 450px;
     padding-left: 15px;
     padding-right: 15px;
   }
@@ -64,7 +65,6 @@
     align-items: center;
     padding-top: 60px;
     padding-bottom: 0px;
-    width: 450px;
     padding-left: 15px;
     padding-right: 15px;
   }
@@ -628,9 +628,10 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    max-width: 480px;
   }
   .header__menu {
-    width: 450px;
     padding-left: 15px;
     padding-right: 15px;
     font-style: normal;
@@ -983,13 +984,13 @@
     justify-content: center;
     padding-top: 94px;
     padding-bottom: 94px;
+    width: 100%;
+    max-width: 480px;
   }
   .clients__container {
     color: #ffffff;
-    width: 450px;
   }
   .clients__wrapper {
-    width: 450px;
     padding-left: 15px;
     padding-right: 15px;
     display: flex;
@@ -1160,6 +1161,8 @@
     justify-content: center;
     padding-top: 60px;
     padding-bottom: 60px;
+    width: 100%;
+    max-width: 480px;
   }
   .article__description {
     font-family: "Roboto";
@@ -1174,11 +1177,9 @@
     text-align: justify;
   }
   .article__box {
-    max-width: 450px;
     display: inline-block;
   }
   .article__icon-box {
-    width: 450px;
     height: 120px;
     display: flex;
     justify-content: center;
@@ -1320,6 +1321,8 @@
     justify-content: center;
     padding-bottom: 60px;
     border-top: 1px solid #ececec;
+    width: 100%;
+    max-width: 480px;
   }
   .portfolio {
     color: #ffffff;
@@ -1328,6 +1331,8 @@
     padding-bottom: 44px;
     margin: 0;
     gap: 0;
+    width: 100%;
+    max-width: 480px;
   }
   .slider__container {
     color: #ffffff;
@@ -1617,14 +1622,14 @@
     background-color: #f5f4fa;
     padding-top: 94px;
     padding-bottom: 94px;
+    width: 100%;
+    max-width: 480px;
   }
   .team__container {
-    width: 450px;
     padding-left: 15px;
     padding-right: 15px;
   }
   .team__box {
-    width: 450px;
     margin-bottom: 35px;
     display: flex;
     justify-content: center;
@@ -1959,6 +1964,7 @@
     left: 0;
     top: 0;
     width: 100%;
+    max-width: 480px;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
     transition: cubic-bezier(250ms);
@@ -1968,7 +1974,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 450px;
+    width: 100%;
     height: 681px;
     background-color: #ffffff;
   }
@@ -2606,10 +2612,11 @@
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .menu-container {
-    width: 450px;
+    width: 100%;
+    max-width: 480px;
     position: fixed;
     height: 796px;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     transform: scaleX(0);
     transition: transform 1s;
     padding-left: 15px;
@@ -2647,7 +2654,9 @@
     position: absolute;
     top: 0;
     right: 0;
-    margin: 40px;
+    margin: 10px;
+    width: 100%;
+    max-width: 320px;
   }
   .close-menu {
     position: absolute;
@@ -2868,6 +2877,10 @@
     bottom: -20px;
     left: 0;
   }
+  .nav {
+    width: 100%;
+    max-width: 480px;
+  }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .nav__box {
@@ -2954,6 +2967,8 @@
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .order {
     color: #ffffff;
+    width: 100%;
+    max-width: 480px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -2964,7 +2979,6 @@
     background-position: center;
   }
   .order__container {
-    min-width: 480px;
     padding-top: 118px;
     padding-bottom: 118px;
     color: #ffffff;
@@ -2976,7 +2990,7 @@
   .order__header {
     display: flex;
     justify-content: center;
-    width: 365px;
+    max-width: 365px;
     height: 84px;
     text-align: center;
   }
