--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -1,9 +1,10 @@
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .menu-container {
-    width: 450px;
+    width: 100%;
+    max-width: 480px;
     position: fixed;
     height: 796px;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
 
     transform: scaleX(0);
     transition: transform 1s;
@@ -46,7 +47,9 @@
     position: absolute;
     top: 0;
     right: 0;
-    margin: 40px;
+    margin: 10px;
+    width: 100%;
+    max-width: 320px;
   }
 
   .close-menu {
