--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -43,6 +43,11 @@
       left: 0;
     }
   }
+  .nav {
+    // margin-right: 300px;
+    width: 100%;
+    max-width: 480px;
+  }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .nav__box {
