--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -4,6 +4,7 @@
     left: 0;
     top: 0;
     width: 100%;
+    max-width: 480px;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
     transition: cubic-bezier(250ms);
@@ -13,7 +14,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 450px;
+    width: 100%;
     height: 681px;
     background-color: #ffffff;
   }
