--- a/sass/components/_pagefooter.scss
+++ b/sass/components/_pagefooter.scss
@@ -7,6 +7,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    max-width: 480px;
   }
 
   .footer__container {
@@ -14,7 +16,7 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    width: 450px;
+
     padding-left: 15px;
     padding-right: 15px;
   }
@@ -26,7 +28,7 @@
     align-items: center;
     padding-top: 60px;
     padding-bottom: 0px;
-    width: 450px;
+
     padding-left: 15px;
     padding-right: 15px;
   }
