--- a/sass/components/_pagesectionportfolio.scss
+++ b/sass/components/_pagesectionportfolio.scss
@@ -7,6 +7,8 @@
     padding-bottom: 60px;
     // background-color: aquamarine;
     border-top: 1px solid #ececec;
+    width: 100%;
+    max-width: 480px;
   }
   .portfolio {
     color: #ffffff;
@@ -15,6 +17,8 @@
     padding-bottom: 44px;
     margin: 0;
     gap: 0;
+    width: 100%;
+    max-width: 480px;
   }
   .slider__container {
     color: #ffffff;
