--- a/sass/components/_pagesectionteam.scss
+++ b/sass/components/_pagesectionteam.scss
@@ -6,14 +6,15 @@
     background-color: #f5f4fa;
     padding-top: 94px;
     padding-bottom: 94px;
+    width: 100%;
+    max-width: 480px;
   }
   .team__container {
-    width: 450px;
     padding-left: 15px;
     padding-right: 15px;
   }
   .team__box {
-    width: 450px;
+   
     margin-bottom: 35px;
     display: flex;
     justify-content: center;
