--- a/css/main.css
+++ b/css/main.css
@@ -2651,9 +2651,9 @@
     background-color: transparent;
   }
   .open-menu {
-    position: absolute;
-    top: 0;
-    right: 0;
+    position: relative;
+    top: -60px;
+    right: -260px;
     margin: 10px;
     width: 100%;
     max-width: 320px;
