--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -1,7 +1,7 @@
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .menu-container {
     width: 100%;
-    max-width: 480px;
+
     position: fixed;
     height: 796px;
     background-color: rgb(255, 255, 255);
@@ -25,7 +25,7 @@
     flex-direction: column;
 
     padding-right: 0px;
-    
+
     padding: 0;
   }
   .is-open {
@@ -44,12 +44,10 @@
     }
   }
   .open-menu {
-    position: relative;
-    top: -30px;
-    right: -260px;
-    margin: 10px;
-    width: 100%;
-    max-width: 320px;
+    position: absolute;
+    top: 1;
+    right: 0;
+    margin: 15px;
   }
 
   .close-menu {
