--- a/sass/components/_pagesectionteam.scss
+++ b/sass/components/_pagesectionteam.scss
@@ -7,14 +7,15 @@
     padding-top: 94px;
     padding-bottom: 94px;
     width: 100%;
-    max-width: 480px;
   }
   .team__container {
     padding-left: 15px;
     padding-right: 15px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
   .team__box {
-   
     margin-bottom: 35px;
     display: flex;
     justify-content: center;
@@ -56,7 +57,7 @@
     font-style: normal;
     font-weight: 900;
     font-size: 44px;
-
+    padding-bottom: 30px;
     text-transform: uppercase;
     letter-spacing: 0.03em;
     color: #212121;
